--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "trustmebro"
+name = "trustmebro-macro"
 version = "0.1.0"
 edition = "2021"
 authors = ["Tristan Poland <me@tridentforu.com>"]
